# rust_crawler

./: README.md
rust_crawler/: .gitignore  Cargo.toml
rust_crawler/rust-stemmers/algorithms/: english.sbl
rust_crawler/src/: main.rs
rust_crawler/src/crawl/: crawler.rs
rust_crawler/src/index/: fprocessing.rs  hash.rs  lexem.rs  mod.rs
