[package]
name = "crawler"
version = "0.1.0"
authors = ["Evgeny.Korchagin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
tokio = { version = "0.2.11", features = ["full"]}
reqwest = "0.10.2"
lazy_static = "1.4.0"
rust-stemmers = {path ="./rust-stemmers" }
url = "2.1.1"
memmap = "0.7.0"
robotstxt = "0.1.0"
prettytable-rs = "^0.8"